package dio._1coding_future_POO._5_Interface.equipamento.copiadora;

public interface Copiadora {
    public void copiar();
}
