package dio._1coding_future_POO._5_Interface.equipamento.copiadora;

public class Xerox implements Copiadora {
    @Override
    public void copiar() {
        System.out.println("Copiar");
    }
}
