package dio._1coding_future_POO._5_Interface.equipamento.digitalizadora;

public class Deskjet implements Digitalizadora {
    public void digitalizar(){
        System.out.println("Digitalizando");
    }
}
