package dio._1coding_future_POO._5_Interface.equipamento.digitalizadora;

public interface Digitalizadora {
    public void digitalizar();
}
