package dio._1coding_future_POO._5_Interface.equipamento.impresora;

public interface Impressora {
    public void imprimir();
}
