package dio._1coding_future_POO._5_Interface.equipamento.impresora;

public class Scanner implements Impressora {
    @Override
    public void imprimir(){
        System.out.println("Imprimindo");
    }
}
